<resources>
    <string name="app_name" translatable="false">Shopping List</string>
    <string name="app_name_long" translatable="false">Privacy Friendly Shopping List</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="language">US</string>
    <string name="date_long_pattern">EE MM/dd/yyyy HH:mm</string>
    <string name="date_short_pattern">EE MM/dd/yyyy</string>
    <string name="date_day_stats_pattern">MM/dd/yy</string>
    <string name="date_month_pattern">MMM yy</string>
    <string name="time_pattern">HH:mm</string>
    <string name="number_format_0_decimals" translatable="false">"###,###,###,##0"</string>
    <string name="number_format_1_decimal" translatable="false">"###,###,###,##0.0"</string>
    <string name="number_format_2_decimals" translatable="false">"###,###,###,##0.00"</string>
    <string name="currency">$</string>
    <string name="number_decimal_separator">.</string>
    <string name="do_not_show_again" translatable="false">Don\'t show again!</string>
    <string name="tutorial_dialog_title">Tutorial</string>
    <string name="tutorial_how_to">How to...</string>
    <string name="tutorial_create_list">... create a new list?</string>
    <string name="tutorial_delete_lists">... delete multiple lists?</string>
    <string name="tutorial_sort_lists">... sort lists?</string>
    <string name="tutorial_recurring_shopping">... create list using\n\t\t\texisting products?</string>
    <string name="tutorial_see_details_list">... see list details?</string>
    <string name="tutorial_icons_meaning">Icons</string>
    <string name="tutorial_icon_priority">High priority list</string>
    <string name="tutorial_icon_reminder_on">Reminder is set. Notifications are turned
        <b>
            <i>on.</i>
        </b>
    </string>
    <string name="tutorial_icon_reminder_off">Reminder is set. Notifications are turned
        <b>
            <i>off.</i>
        </b>
    </string>
    <string name="tutorial_add_product">... add a new product?</string>
    <string name="tutorial_delete_products">... delete multiple products?</string>
    <string name="tutorial_sort_products">... sort products?</string>
    <string name="tutorial_see_products">... see product details?</string>
    <string name="tutorial_see_details_product">... see product details?</string>
    <string name="tutorial_check_product">... check products?</string>
    <string name="tutorial_check_statistics">If the statistics feature for the current list is enabled, products will be
        added to the statistics every time you check them. The same product can be added to the statistics
        multiple times. This allows you to uncheck products, reuse the list and still keep
        track of the checked items.
    </string>
    <string name="tutorial_multiple_delete">Select the items that you want to delete, press the delete icon and confirm
        this action.
    </string>
    <string name="ph_list_name" translatable="false">List Name</string>
    <string name="ph_product_name" translatable="false">Product Name</string>
    <string name="ph_product_info" translatable="false">Store: Aldi, Category: Snacks</string>
    <string name="ph_list_info" translatable="false">Notes: some notes here that take much space. You shoudn\'t be
        seeing multiple lines.
    </string>
    <string name="ph_total_amount" translatable="false">00.00</string>
    <string name="ph_total_in_shopping_cart" translatable="false">00.00</string>
    <string name="ph_list_nr_items" translatable="false">0</string>
    <string name="ph_stats_title" translatable="false">Title</string>
    <string name="ph_lists_details" translatable="false">Priority: High\nNotes: some notes here</string>
    <string name="activity_shopping_list">Shopping List:</string>
    <string name="nr_items">Nr. Items</string>
    <string name="total_list_amount">Total Amount</string>
    <string name="reminder_text">Reminder: %1$d %2$s before</string>
    <string name="lists_empty">You don\'t have any shopping lists</string>
    <string name="alert_message_list">CREATE A LIST</string>
    <string name="alert_message_product">ADD A PRODUCT</string>
    <string name="duplicated_suffix">(New)</string>
    <string name="notification_message">List name: %1$s\nDead line: %2$s</string>
    <string name="notification_setting_status">Notifications are disabled. Please go to settings and turn them on.
    </string>
    <string name="new_product">New Product</string>
    <string name="product_already_exists">Product already exists in this list!</string>
    <string name="price_number_too_big">Number too big!</string>
    <string name="number_format_invalid">Invalid: #,###,##0.00</string>
    <string name="product_list_empty">This list does not contain any products</string>
    <string name="total_amount">Total:</string>
    <string name="total_amount_separator">/</string>
    <string name="store_label">Store:</string>
    <string name="category_label">Category:</string>
    <string name="search">Search</string>
    <string name="no_products_found">No products found!</string>
    <string name="store_detail">Store: %1$s</string>
    <string name="category_detail">Category: %1$s</string>
    <string name="quantity_detail">Quantity: %1$s</string>
    <string name="price_detail">Price: %1$s</string>
    <string name="total_price_detail">Total Price: %1$s</string>
    <string name="notes_detail">Notes: %1$s</string>
    <string name="statistics_total_amout">Total:</string>
    <string name="statistics_range">Range:</string>
    <string name="statistics_group_by">Group by:</string>
    <string name="statistics_y_values">Values:</string>
    <string name="statistics_quantity_unit">Units</string>
    <string name="no_scale_abbreviation" translatable="false"></string>
    <string name="kilo_abbreviation" translatable="false">K.</string>
    <string name="million_abbreviation" translatable="false">M.</string>
    <string name="no_scale_value" translatable="false">1</string>
    <string name="kilo_value" translatable="false">1000</string>
    <string name="million_value" translatable="false">1000000</string>
    <string name="create_template">Create Template</string>
    <string name="template_titel">Template</string>
    <string name="template_message">Create a list based on all existing products in two steps:\n\n
        1. Give the list a name\n
        2. Delete all irrelevant products from the new list\n\n
        Would you like to continue?
    </string>
    <string name="sort_options">Sort</string>
    <string name="sort_ascencing_descending">Ascending/Descending</string>
    <string name="sort_ascencing">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_priority">Priority</string>
    <string name="sort_by_quantity">Quantity</string>
    <string name="sort_by_store">Store</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_category">Category</string>
    <string name="delete_confirmation_title">Delete Confirmation</string>
    <string name="delete_foto_confirmation">Delete selected image (%1$s)? This operation cannot be undone!</string>
    <string name="delete_lists_confirmation">Delete all selected lists? This operation cannot be undone!</string>
    <string name="delete_list_confirmation">Delete selected list (%1$s)? This operation cannot be undone!</string>
    <string name="activity_delete_lists">Delete Shopping Lists</string>
    <string name="delete_products_confirmation">Delete all selected products? This operation cannot be undone!</string>
    <string name="delete_product_confirmation">Delete selected product (%1$s)? This operation cannot be undone!</string>
    <string name="activity_delete_products">Delete Products</string>
    <string name="statistics">Statistics</string>
    <string name="delete_statistics_confirmation">Delete all currently saved statistics? This operation cannot be
        undone!
    </string>
    <string name="about">About</string>
    <string name="version_number">Version 1.0.6</string>
    <string name="about_developper">Authors:</string>
    <string name="about_author_greb">Grebiel José Ifill Brito</string>
    <string name="about_author_cri">Christian König and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by
        Technische Universität Darmstadt. Sourcecode licensed under Apache License, Version 2.0. Images copyright TU
        Darmstadt und Google Inc.
    </string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false">
        <a href="https://github.com/SecUSo/privacy-friendly-shopping-list">Github-Repo</a>
    </string>
    <string name="url" translatable="false">
        <a href="https://www.secuso.org/pfa">SECUSO-Website</a>
    </string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_checkbox_position">Checkbox Position</string>
    <string name="pref_checkbox_summary_on">Product checkboxes are shown on the right</string>
    <string name="pref_checkbox_summary_off">Product checkboxes are shown on the left</string>
    <string name="pref_checkbox_toast_on">Checkboxes will be shown on the right!</string>
    <string name="pref_checkbox_toast_off">Checboxes will be shown on the left!</string>
    <string name="pref_checkbox_right_display_text">R</string>
    <string name="pref_checkbox_left_display_text">L</string>
    <string name="pref_move_products">Move Checked Products</string>
    <string name="pref_move_products_summary_on">Move checked products to the end of the list is on</string>
    <string name="pref_move_products_summary_off">Move checked products to the end of the list is off</string>
    <string name="pref_move_products_toast_on">Move checked products have been turned on!</string>
    <string name="pref_move_products_toast_off">Move checked products have been turned off!</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notifications_title">Reminder</string>
    <string name="pref_notifications_summary_on">Notifications for reminder turned on</string>
    <string name="pref_notifications_summary_off">Notifications for reminder turned off</string>
    <string name="pref_notifications_toast_on">Notifications for the reminder turned on!</string>
    <string name="pref_notifications_toast_off">Notifications for the reminder turned off!</string>
    <string name="pref_header_statistics">Statistics</string>
    <string name="pref_statistics_title">Set default</string>
    <string name="pref_statistics_summary_on">Statistics will be \"enabled\" per default when creating a new list.
    </string>
    <string name="pref_statistics_summary_off">Statistics will be \"disabled\" per default when creating a new list.
    </string>
    <string name="pref_statistics_delete">Delete</string>
    <string name="pref_statistics_delete_summary">Delete all data from saved statistics</string>
    <string name="pref_header_currency">Currency</string>
    <string name="pref_currency_title">Select currency</string>
</resources>