<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
           android:checkableBehavior="all">
        <item
                android:id="@+id/nav_main"
                android:icon="@drawable/ic_home_white_24sp"
                android:title="@string/action_main"/>
        <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_insert_chart_white_24sp"
                android:title="@string/statistics"/>
        <item
                android:id="@+id/nav_tutorial"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/tutorial_dialog_title"/>

    </group>

    <group android:id="@+id/nav_group_add"
           android:checkableBehavior="all">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings"/>

        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/action_help"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/action_about"/>
    </group>
</menu>
